2006-01-18  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_edit): fix check for when users don't
	save their output files, the try/except was in the wrong section.

2006-01-17  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_run): fix __file__ global missing from
	script's namespace when executed via %run.  After a report by
	Vivian.

	* IPython/Debugger.py (Pdb.__init__): Fix breakage with '%run -d'
	when using python 2.4.  The parent constructor changed in 2.4, and
	we need to track it directly (we can't call it, as it messes up
	readline and tab-completion inside our pdb would stop working).
	After a bug report by R. Bernstein <rocky-AT-panix.com>.

2006-01-16  Ville Vainio  <vivainio@gmail.com>

	* Ipython/magic.py:Reverted back to old %edit functionality 
	that returns file contents on exit.
	
	* IPython/path.py: Added Jason Orendorff's "path" module to 
	IPython tree, http://www.jorendorff.com/articles/python/path/.
	You can get path objects conveniently through %sc, and !!, e.g.:
	 sc files=ls
	 for p in files.paths: # or files.p
	     print p,p.mtime
	
	* Ipython/iplib.py:"," and ";" autoquoting-upon-autocall 
	now work again without considering the exclusion regexp - 
	hence, things like ',foo my/path' turn to 'foo("my/path")' 
	instead of syntax error.
	

2006-01-14  Ville Vainio  <vivainio@gmail.com>

	* IPython/ipapi.py (ashook, asmagic, options): Added convenience 
	ipapi decorators for python 2.4 users, options() provides access to rc 
	data.
	
	* IPython/Magic.py (magic_cd): %cd now accepts backslashes
	as path separators (even on Linux ;-). Space character after 
	backslash (as yielded by tab completer) is still space;
	"%cd long\ name" works as expected.

	* IPython/ipapi.py,hooks.py,iplib.py: Hooks now implemented
	as "chain of command", with priority. API stays the same, 
	TryNext exception raised by a hook function signals that 
	current hook failed and next hook should try handling it, as 